--- a/Core/View/AdminPlugins.html.twig
+++ b/Core/View/AdminPlugins.html.twig
@@ -158,6 +158,7 @@
 {% block javascripts %}
     {{ parent() }}
     {% if config('disable_rm_plugins', false) == false %}
+        <script src="{{ asset('node_modules/jquery-ui-dist/jquery-ui.min.js') }}"></script>
         <script>
             function deletePlugin(pluginName) {
                 bootbox.confirm({
@@ -199,6 +200,61 @@
                         e.preventDefault();
                         alert('{{ trans('plugin-file-too-big', {'%size%': fsc.getMaxFileUpload()}) }}');
                         animateSpinner('remove');
+                    }
+                });
+
+                // mantenemos el ancho cuando arrastramos el elemento
+                const fixWidthHelper = function (e, ui) {
+                    ui.children().each(function () {
+                        $(this).width($(this).width());
+                    });
+                    return ui;
+                };
+                $('#installed-plugins').sortable({
+                    items: "tr.item-plugin",
+                    axis: "y",
+                    helper: fixWidthHelper,
+                    handle: ".sort-handle",
+                    start: function(event, ui) {
+                        // mantenemos el alto cuando arrastramos el elemento
+
+                        // Obtenemos la altura exacta del elemento que vamos a arrastrar
+                        const itemHeight = ui.item.height();
+
+                        // Aplicamos esa altura al placeholder
+                        ui.placeholder.height(itemHeight);
+
+                        // También aseguramos que el placeholder se comporte como una fila de tabla,
+                        // aunque esto debería estar en CSS, no está de más en JS para asegurar.
+                        ui.placeholder.css('display', 'table-row');
+                    },
+                    update: function( event, ui ) {
+                        const orden = $(this).find('tbody').children('tr.item-plugin').map(function () {
+                            return $(this).find('.plugin-name').text().trim();
+                        }).get();
+
+                        // agregamos spinner
+                        animateSpinner('add');
+                        // eliminamos posibilidad de poder ordenar
+                        $('#installed-plugins').sortable('disable');
+                        $('.sort-handle').css('cursor', 'not-allowed');
+
+                        const url = new URL(window.location.href);
+                        url.searchParams.append('action', 'sort-plugins');
+                        $.ajax({
+                            method: "POST",
+                            url,
+                            data: {orden},
+                            dataType: "json",
+                            success: function () {
+                                location.reload();
+                            },
+                            error: function (msg) {
+                                alert(msg.status + " " + msg.responseText);
+                                $('#installed-plugins').sortable('enable');
+                                $('.sort-handle').css('cursor', 'move');
+                            }
+                        });
                     }
                 });
             });
@@ -293,20 +349,23 @@
 
     <div class="card border-success m-2 mb-3">
         <div class="card-header border-success">{{ trans('enabled-plugins') }}</div>
-        {{ _self.tablePlugins(fsc.pluginList | filter(plugin => plugin.enabled)|sort((a, b) => a.order <=> b.order), fsc.url()) }}
+        {{ _self.tablePlugins(fsc.pluginList | filter(plugin => plugin.enabled)|sort((a, b) => a.order <=> b.order), fsc.url(), 'installed-plugins', true) }}
     </div>
 
     <div class="card border-dark m-2">
         <div class="card-header border-dark">{{ trans('disabled-plugins') }}</div>
-        {{ _self.tablePlugins(fsc.pluginList | filter(plugin => plugin.enabled == false), fsc.url()) }}
+        {{ _self.tablePlugins(fsc.pluginList | filter(plugin => plugin.enabled == false), fsc.url(), 'disabled-plugins') }}
     </div>
 {% endmacro %}
 
-{% macro tablePlugins(pluginList, url) %}
-    <div class="table-responsive" id="installed-plugins">
+{% macro tablePlugins(pluginList, url, id, sortable = null) %}
+    <div class="table-responsive" id="{{ id }}">
         <table class="table table-striped table-hover mb-0">
             <thead>
             <tr>
+                {% if sortable %}
+                <th></th>
+                {% endif %}
                 <th>{{ trans('name') }}</th>
                 <th class="text-end">{{ trans('version') }}</th>
                 <th>{{ trans('description') }}</th>
@@ -322,6 +381,9 @@
                     {% set trClass = '' %}
                 {% endif %}
                 <tr class="{{ trClass }} item-plugin">
+                    {% if sortable %}
+                    <td class="sort-handle" style="cursor: move;"><i class="fa-solid fa-bars"></i></td>
+                    {% endif %}
                     <td class="plugin-name">{{ plugin.name }}</td>
                     <td class="text-end">
                         {% if plugin.version == 0 %}
@@ -401,7 +463,11 @@
                 </tr>
             {% else %}
                 <tr class="table-warning">
-                    <td colspan="4"><b>{{ trans('no-data') }}</b></td>
+                    {% if sortable %}
+                        <td colspan="5"><b>{{ trans('no-data') }}</b></td>
+                    {% else %}
+                        <td colspan="4"><b>{{ trans('no-data') }}</b></td>
+                    {% endif %}
                 </tr>
             {% endfor %}
             </tbody>
