--- a/Core/View/ReportTaxes.html.twig
+++ b/Core/View/ReportTaxes.html.twig
@@ -1,4 +1,3 @@
-
 {#
 /**
  * This file is part of FacturaScripts
@@ -42,7 +41,7 @@
                                 <i class="{{ fsc.getPageData().icon }} mr-2"></i> {{ fsc.title }}
                             </h1>
                             <p class="text-muted mb-4">{{ trans('report-taxes-p') }}.</p>
-                            <div class="row">
+                            <div class="row g-2">
                                 {% if fsc.empresa.count() > 1 %}
                                     <div class="col-sm mb-3">
                                         {{ trans('company') }}
@@ -110,7 +109,7 @@
                                     </select>
                                 </div>
                             </div>
-                            <div class="row">
+                            <div class="row g-2">
                                 <div class="col-sm-3 mb-3">
                                     {{ trans('date') }}
                                     <select name="type-date" class="form-select">
@@ -174,10 +173,20 @@
                                 </div>
                                 <div class="col-sm-2">
                                     <div class="form-check">
-                                        <input class="form-check-input" type="checkbox" value="1" name="column_numsupplier"
+                                        <input class="form-check-input" type="checkbox" value="1"
+                                               name="column_numsupplier"
                                                id="column_numsupplier" checked>
                                         <label class="form-check-label" for="column_numsupplier">
                                             {{ trans('numsupplier') }}
+                                        </label>
+                                    </div>
+                                </div>
+                                <div class="col-sm-2">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="checkbox" value="1" name="column_date"
+                                               id="column_date" checked>
+                                        <label class="form-check-label" for="column_date">
+                                            {{ trans('date') }}
                                         </label>
                                     </div>
                                 </div>
@@ -237,7 +246,8 @@
                                 </div>
                                 <div class="col-sm-2">
                                     <div class="form-check">
-                                        <input class="form-check-input" type="checkbox" value="1" name="column_pct_surcharge"
+                                        <input class="form-check-input" type="checkbox" value="1"
+                                               name="column_pct_surcharge"
                                                id="column_pct_surcharge" checked>
                                         <label class="form-check-label" for="column_pct_surcharge">
                                             {{ trans('pct-surcharge') }}
@@ -273,7 +283,8 @@
                                 </div>
                                 <div class="col-sm-2">
                                     <div class="form-check">
-                                        <input class="form-check-input" type="checkbox" value="1" name="column_supplied_amount"
+                                        <input class="form-check-input" type="checkbox" value="1"
+                                               name="column_supplied_amount"
                                                id="column_supplied_amount" checked>
                                         <label class="form-check-label" for="column_supplied_amount">
                                             {{ trans('supplied-amount') }}
@@ -291,21 +302,15 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="card-footer">
-                            <div class="row justify-content-start">
-                                <div class="col-sm">
-                                    <button type="button" onclick="sendReportTaxes('purchases')"
-                                            class="btn btn-lg btn-block btn-secondary btn-spin-action w-100">
-                                        {{ trans('purchases') }}
-                                    </button>
-                                </div>
-                                <div class="col-sm">
-                                    <button type="button" onclick="sendReportTaxes('sales')"
-                                            class="btn btn-lg btn-block btn-primary btn-spin-action w-100">
-                                        {{ trans('sales') }}
-                                    </button>
-                                </div>
-                            </div>
+                        <div class="card-footer d-flex gap-2">
+                            <button type="button" onclick="sendReportTaxes('purchases')"
+                                    class="btn btn-lg btn-secondary btn-spin-action flex-fill">
+                                {{ trans('purchases') }}
+                            </button>
+                            <button type="button" onclick="sendReportTaxes('sales')"
+                                    class="btn btn-lg btn-primary btn-spin-action flex-fill">
+                                {{ trans('sales') }}
+                            </button>
                         </div>
                     </div>
                 </div>
