--- a/Core/Assets/CSS/custom.css
+++ b/Core/Assets/CSS/custom.css
@@ -109,4 +109,8 @@ input[required].form-control:not(:read-only) {
 textarea[required].form-control:not(:read-only) {
     background-image: linear-gradient(to bottom, rgba(253,253,150,0.5), rgba(253,253,150,0.25));
 }
+select[required].form-control:not(:disabled),
+select[required].select2-hidden-accessible + .select2-container .select2-selection {
+    background-image: linear-gradient(to bottom, rgba(253,253,150,0.5), rgba(253,253,150,0.25));
+}
 /* end pace customizations */
